--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
           <li class="header__links-list-item">
             <a class="header__link header__link_active" href="#">главная</a>
           </li>
-          <li class="header__links-list-item">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+
             <a class="header__link" href="#">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
